force-app/main/default/objects/PF_FW_Architectural_Decision__c/PF_FW_Architectural_Decision__c.object-meta.xml
<CustomObject>
    <description>This is where project customer journeys will be captured within the ProjectForce application.</description>
    <label>Architectural Decision</label>
    <nameField>
        <label>Architectural Decision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Architectural Decisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>