force-app/main/default/objects/PF_FW_Architectural_Decision__c/fields/AD_Description__c.field-meta.xml
<CustomField>
    <fullName>AD_Description__c</fullName>
    <description>Provide a brief description of the AD</description>
    <label>AD Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>