force-app/main/default/objects/PF_FW_Architectural_Decision__c/fields/AD_Number__c.field-meta.xml
<CustomField>
    <fullName>AD_Number__c</fullName>
    <displayFormat>AD-{00000}</displayFormat>
    <inlineHelpText>This is the auto-generated identifier.</inlineHelpText>
    <label>AD Number</label>
    <type>AutoNumber</type>
</CustomField>