force-app/main/default/objects/PF_FW_Architectural_Decision__c/fields/Foundation_Feature__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Feature__c</fullName>
    <label>Foundation/Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>