force-app/main/default/objects/PF_FW_Architectural_Decision__c/fields/PF_FW_AD_Current_User__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_AD_Current_User__c</fullName>
    <formula>IF( PF_FW_Assigned_To__r.Id = $User.Id, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AD Current User</label>
    <type>Text</type>
</CustomField>