force-app/main/default/objects/PF_FW_Architectural_Decision__c/fields/PF_FW_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>PF_FW_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify the business user who&#39;s responsible for this AD.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Architectural_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>