force-app/main/default/objects/PF_FW_Architectural_Decision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AD_Number__c</columns>
    <columns>Customer_Experience__c</columns>
    <columns>NAME</columns>
    <columns>AD_Description__c</columns>
    <columns>PF_FW_Estimated_Hours__c</columns>
    <columns>Capability__c</columns>
    <columns>Cloud__c</columns>
    <columns>Foundation_Feature__c</columns>
    <columns>CRM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>